--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "lint": "eslint --ext ts .",
     "lintfix": "eslint --ext ts . --fix",
     "format": "prettier --write \"**/*.{ts,json,yml,yaml,md}\"",
+    "test": "jest",
     "prepare": "husky install"
   },
   "devDependencies": {
     "@google/clasp": "^2.3.0",
     "@types/cheerio": "^0.22.28",
     "@types/google-apps-script": "^1.0.31",
+    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-googleappsscript": "^1.0.3",
     "husky": ">=6",
+    "jest": "^26.6.3",
     "lint-staged": ">=10",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
